# videoclaw-cli

./: .env.example  .gitignore  AGENTS.md  AGENT_CLI_PACKAGING.md  AGENT_EXTERNAL_CLI_GUIDE.md  CLAUDE.md  Makefile  README.md  RELEASE_NOTES.md  agent-cli-release-gate.sh  install.sh  pyproject.toml
.gsd/: PREFERENCES.md
agent-cli-toolkit/: AGENTS.md  SPEC.md
mcp-shim/: README.md  mcp_server.py  pyproject.toml
mcp-shim/tests/: conftest.py  test_mcp_protocol.py  test_tools_unit.py
packaging/: AUDIT.md  DISTRIBUTION-PLAN.md  Dockerfile  README.md  _entry.py  agent-cli.yaml  claw.spec  dist-verify.sh  envelope_shim.md  manifest-validate.py  pyproject.overlay.toml  setup.sh  skills-validate.py
skills/: README.md
tests/: generate_assets.py  generate_tts_and_scenes.py  smoke_test_western_drama.py  test_agent_cli_release_gate.py  test_agents.py  test_audio_post.py  test_audit_log.py  test_checkpoint.py  test_cli_image_defaults.py  test_compose_transitions.py  test_composition_audit.py  test_config_cli.py  test_config_defaults.py  test_cover_frame.py  test_director.py  test_doctor_exit_codes.py  test_drama.py  test_drama_e2e.py  test_drama_edit_shot.py  test_drama_models.py  test_drama_planner.py  test_drama_run_json_mode.py  test_drama_runner.py  test_drama_script_ingestion.py  test_english_character_designer.py  test_english_quality.py  test_english_subtitles.py  test_english_voice.py  test_events.py  test_evolink_gpt_image2.py  test_executor_handlers.py  test_executor_perf.py  test_experience_feedback.py  (+28 more)
tests-external/: README.md  test_e2e_first_3_shots.py
(+109 files in other folders)
